--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-<!-- <h1 align="center">Hi 👋, I'm Rajiv</h1> -->
+<!-- <h1 align="center">Hi 👋, I'm Rahul</h1> -->
 <div id="header" align="center">
   <img src="https://media.giphy.com/media/M9gbBd9nbDrOTu1Mqx/giphy.gif" width="100"/>
   </div>
@@ -11,13 +11,13 @@
 </div> -->
 <!-- <h2><i>About Me : </i></h2> -->
   
-<i>I am Rajiv from India. Fullstack Developer. </i>
+<i>I am Rahul from India. Fullstack Developer. </i>
 
 I'm passionate about Building useful Internet products and fulfilling my love and passion for coding by building useful Internet products, Web apps, and Websites.
 
 <img align="right" alt="coding" width="400" src="https://dresma.ai/wp-content/uploads/2022/01/mern-stack-developer.gif">
 
-<!-- <p align="left"> <img src="https://komarev.com/ghpvc/?username=rajiv75&label=Profile%20views&color=0e75b6&style=flat" alt="rajiv75" /> </p> -->
+<!-- <p align="left"> <img src="https://komarev.com/ghpvc/?username=rahulrai2000&label=Profile%20views&color=0e75b6&style=flat" alt="rahulrai2000" /> </p> -->
 
 - 🌱 I’m currently learning *Back-End Development.*
 
@@ -27,7 +27,7 @@ I'm passionate about Building useful Internet products and fulfilling my love an
 
 - 💬 Ask me about *React js.*
 
-- 📫 Reach me out at *kraj12631@gmail.com*
+- 📫 Reach me out at *Manishray0925@gmail.com*
  
 <!----------------------------------- Social Media Links Section ------------------------------------>
 
@@ -53,22 +53,16 @@ I'm passionate about Building useful Internet products and fulfilling my love an
 
 <h2><i>:pushpin:Let's Connect :</i></h2>
 <p align="left">
-<a href="https://twitter.com/introvert">
-  <img src="https://img.shields.io/badge/Twitter-1DA1F2?style=for-the-badge&logo=Twitter&logoColor=white" alt="Twitter"/>
-</a>
+
 <!--   
-  <a href="https://www.linkedin.com/in/rajiv-panchal-344350258">
+  <a href="https://www.linkedin.com/in/rahul-rai-092b82187">
   <img src="https://img.shields.io/badge/linkdin-1DA1F2?style=for-the-badge&logo=Linkdin&logoColor=red" alt="linkdin"/>
 </a>
   
-  <a href="https://instagram.com/rajiv.9625">
+  <a href="https://instagram.com/">
   <img src="https://img.shields.io/badge/instagram-1DA1F2?style=for-the-badge&logo=Instagram&logoColor=pink" alt="instagram"/>
 </a>
 <a href="https://instagram.com/rajiv.9625" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="rajiv.9625" height="30" width="40" /></a> -->
-  
-  <a href="https://codepen.io/rajivcode">
-  <img src="https://img.shields.io/badge/CodePen-000000?style=for-the-badge&logo=CodePen&logoColor=white" alt="Connect with on CodePen"/>
-</a>
 </p>
 
 
@@ -82,20 +76,20 @@ I'm passionate about Building useful Internet products and fulfilling my love an
 <!----------------------------------- Profile View Section ------------------------------------>
 
 <p align="left">
-    <a href="https://github.com/Rajiv-Panchal">
-        <img src="https://komarev.com/ghpvc/?username=Rajiv-Panchal&label=Profile%20views&color=0e75b6&style=flat" alt="rajiv75" />
+    <a href="https://github.com/RahulRai2000">
+        <img src="https://komarev.com/ghpvc/?username=RahulRai2000&label=Profile%20views&color=0e75b6&style=flat" alt="rahulrai2000" />
     </a>
-    <a href="https://github.com/Rajiv-Panchal?tab=followers">
-        <img src="https://img.shields.io/github/followers/Rajiv-Panchal?label=Followers&style=social" alt="followers-count">
+    <a href="https://github.com/RahulRai2000?tab=followers">
+        <img src="https://img.shields.io/github/followers/RahulRai2000?label=Followers&style=social" alt="followers-count">
     </a>
 </p>
 
 
 
 <!---copy----->
-<!-- <p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=rajiv75&show_icons=true&theme=dark&locale=en&layout=compact" alt="rajiv75" /></p>
+<!-- <p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=RahulRai2000&show_icons=true&theme=dark&locale=en&layout=compact" alt="RahulRai2000" /></p>
 
 
-<p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=rajiv75&show_icons=true&theme=dark&locale=en" alt="rajiv75" /></p>
+<p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=RahulRai2000&show_icons=true&theme=dark&locale=en" alt="RahulRai2000" /></p>
 
-<p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=rajiv75&theme=dark" alt="rajiv75" /></p> -->
+<p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=RahulRai2000&theme=dark" alt="RahulRai2000" /></p> -->
